tests/semantic/pass/same_forward_definition_in_scope.c
int a;

int main() {
  int f(int);
  int f(int);
}
