tests/semantic/fail/previousFunctionDefinition.c
int a;

int b;

void f() {
  
}

int f;

int main() {
  return 0;
}
